# ompi-sphinx-dist

./: .gitignore  Makefile.am  autogen.sh  configure.ac
config/: Makefile.am  distscript.sh
docs/: .gitignore  MPI_Abort.3.rst  MPI_Bcast.3.rst  Makefile.am  conf.py  index.rst  mpirun.1.rst  sphinx-requirements.txt
docs/src/: building.rst  conf.py  configuring.rst  index.rst  man_pages.rst
docs/src/ompi-man/: index.rst  man1-index.rst  man3-index.rst
docs/src/ompi-man/man1/: mpirun.1.rst
docs/src/ompi-man/man3/: MPI_Abort.3.rst  MPI_Bcast.3.rst
docs/src/oshmem-man/: index.rst  man1-index.rst  man3-index.rst
docs/src/oshmem-man/man1/: oshrun.1.rst
docs/src/oshmem-man/man3/: shmem_broadcast.3.rst  shmem_init.3.rst
src/: Makefile.am  abort.c  bcast.c
